# App_launcher

./: .gitignore  CMakeLists.txt  README.md
src/: mainwindow.h  mainwindow.ui
